Fix up textbox spacing
In a recent commit I mixed up a couple of changes with how textboxes were being spaced apart. This corrects the errors.

--- a/Css/viper_tools.less
+++ b/Css/viper_tools.less
@@ -563,7 +563,7 @@
         }
 
         .Viper-subSectionRow > & + .Viper-textbox {
-            margin-bottom: 0.56em;
+            margin-top: 0.56em;
         }
     }
 
