--- a/Plugins/ViperInlineToolbarPlugin/ViperInlineToolbarPlugin.css
+++ b/Plugins/ViperInlineToolbarPlugin/ViperInlineToolbarPlugin.css
@@ -321,7 +321,7 @@
 
     .Viper-subSectionRow {
         position: relative;
-        margin-top: 0.5em;
+        margin-top: 0.56em;
     }
 
     .Viper-subSectionRow:first-child {
